<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/splashscreen"
    android:layout_height="match_parent"
    tools:context=".ViewDetails">

    <TextView
        android:id="@+id/Header"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="50dp"
        android:text="View Your Measurement:"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Date of Measurement: "
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Header" />

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="dd-mm-yyyy"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:text="Time:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="hh:mm"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <TextView
        android:id="@+id/Systolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:text="Systolic:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <TextView
        android:id="@+id/systolicValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="number"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Systolic" />

    <TextView
        android:id="@+id/Diastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"

        android:layout_marginTop="50dp"
        android:text="Diastolic:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Systolic" />

    <TextView
        android:id="@+id/diastolicValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="number"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Diastolic" />

    <TextView
        android:id="@+id/HeartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Heart Rate:"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Diastolic" />

    <TextView
        android:id="@+id/heartRateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="number"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/HeartRate" />
    <TextView
        android:id="@+id/Comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="Comment:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/HeartRate" />

    <TextView
        android:id="@+id/commentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:maxLines="5"
        android:text="Comment"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Comment" />
    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/editFrameLayout"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="#4D778E"
        android:layout_margin="24dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/editButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="Edit"
            android:textSize="24sp" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/backFrameLayout"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="#8F4A3B"
        android:layout_margin="24dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/backButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="Back"
            android:textSize="24sp" />
    </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>