...
        android:layout_centerHorizontal="true"
        android:backgroundTint="#3D7330"
        android:layout_marginBottom="16dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/addButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="Add Recors"
            android:textSize="24sp" />
    </FrameLayout>
...
